[package]
name = "boyo"
version = "0.1.0"
authors = ["mdx97 <mathewhorner456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
console = "0.15.8"
env_logger = { version = "0.11.5", features = ["unstable-kv"] }
indexmap = { version = "2.5.0" }
log = { version = "0.4.22", features = ["kv"] }
thiserror = { version = "1.0.64" }
